# spotify_audio_feature

./: .gitignore  README.md  pyproject.toml
data/: all_lyrics.pkl  天体観測 - BUMP OF CHICKEN.lrc
data/lyrics/: AAA_20250929_mode4_top50.pkl  AKB48_20250929_mode4_top50.pkl  B'z_20250929_mode4_top50.pkl  BUMP OF CHICKEN_20250929_mode4_top50.pkl  DREAMS COME TRUE_20250929_mode4_top50.pkl  EXILE_20250929_mode4_top50.pkl  GLAY_20250929_mode4_top50.pkl  GReeeeN_20250929_mode4_top50.pkl  HY_20250929_mode4_top50.pkl  Hey! Say! JUMP_20250929_mode4_top50.pkl  KinKi Kids_20250929_mode4_top50.pkl  L'Arc～en～Ciel_20250929_mode4_top50.pkl  Mr.Children_20250929_mode4_top50.pkl  Mrs. GREEN APPLE_20250929_mode4_top50.pkl  NEWS_20250929_mode4_top50.pkl  ONE OK ROCK_20250929_mode4_top50.pkl  Official髭男dism_20250929_mode4_top50.pkl  RADWIMPS_20250929_mode4_top50.pkl  SEKAI NO OWARI_20250929_mode4_top50.pkl  SMAP_20250929_mode4_top50.pkl  UVERworld_20250929_mode4_top50.pkl  WANIMA_20250929_mode4_top50.pkl  aiko_20250929_mode4_top50.pkl  back number_20250929_mode4_top50.pkl  miwa_20250929_mode4_top50.pkl  あいみょん_20250929_mode4_top50.pkl  いきものがかり_20250929_mode4_top50.pkl  ゆず_20250929_mode4_top50.pkl  ケツメイシ_20250929_mode4_top50.pkl  コブクロ_20250929_mode4_top50.pkl  サザンオールスターズ_20250929_mode4_top50.pkl  スピッツ_20250929_mode4_top50.pkl  ポルノグラフィティ_20250929_mode4_top50.pkl  三代目 J SOUL BROTHERS from EXILE TRIBE_20250929_mode4_top50.pkl  中島みゆき_20250929_mode4_top50.pkl  乃木坂46_20250929_mode4_top50.pkl  倖田來未_20250929_mode4_top50.pkl  加藤ミリヤ_20250929_mode4_top50.pkl  宇多田ヒカル_20250929_mode4_top50.pkl  安室奈美恵_20250929_mode4_top50.pkl  (+9 more)
note/: notebook.ipynb  notebook3.ipynb
note/utils/: lyric_collect.py  lyric_tokenizer.py
output/BERTopic_output_20251002101507/: topic_info.csv  topic_results.csv  topic_results.pkl  topic_words_top30.csv
output/analysis/: UMAPed_artist_df.pkl  UMAPed_song_df.pkl  artist_df_tableau.csv  map.twb  song_df_tableau.csv
