[project]
name = "spotify-audio-feature"
version = "0.1.0"
description = ""
authors = [
    {name = "a-duty-rookie",email = "yutaro1127@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipython (>=9.5.0,<10.0.0)",
    "ipykernel (>=6.30.1,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
