[project]
name = "spotify-audio-feature"
version = "0.1.0"
description = ""
authors = [{ name = "a-duty-rookie", email = "yutaro1127@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "spotipy (>=2.25.1,<3.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "beautifulsoup4 (>=4.14.0,<5.0.0)",
    "neologdn (>=0.5.4,<0.6.0)",
    "fugashi (>=1.5.1,<2.0.0)",
    "ipadic (>=1.0.0,<2.0.0)",
    "protobuf (>=6.32.1,<7.0.0)",
    "unidic-lite (>=1.0.8,<2.0.0)",
    "wordcloud (>=1.9.4,<2.0.0)",
    "nbformat (>=5.10.4,<6.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipython = "^9.5.0"
ipykernel = "^6.30.1"
kagglehub = "^0.3.13"
ipywidgets = "^8.1.7"
bertopic = "^0.17.3"
sudachipy = "^0.6.10"
sudachidict-full = "^20250825"
sentence-transformers = "^5.1.1"

